# quickcheck

./: .gitignore  .travis.yml  BUGS  CollectDataTypes.hs  HACKING_AGENDA.md  LICENSE  QuickCheck.cabal  README  RunCollectDataTypes.hs  TODO  build-all  cabal.haskell-ci  changelog  changelog.md  make-hugs  test-hugs  test-mhs
.github/workflows/: haskell-ci.yml  hugs-ci.yml  microhs-ci.yml
Chalmers/: QuickCheck.hs
Chalmers/QuickCheck/: Arbitrary.hs  Exception.hs  Gen.hs  Monadic.hs  Property.hs
Chalmers/QuickCheck/Examples/: ExSet2.hs
QuickCheck/: update
QuickCheck/QuickCheck/: Function.hs  Test.hs  Text.hs
QuickCheck/QuickCheck/Examples/: ExFol.hs  ExLambda.hs  ExMerge.hs  ExSet.hs  ExSet2.hs  ExSimple.hs  ExTrie.hs  ExWords.hs  Set.hs
Test/: QuickCheck.hs
Test/QuickCheck/: .Gen.hs.swp  All.hs  Arbitrary.hs  Exception.hs  Features.hs  Function.hs  Gen.hs  Modifiers.hs  Monadic.hs  Poly.hs  Property.hs  Random.hs  Rose.hs  State.hs  TH.hs  Test.hs  Text.hs
examples/: ExFol.hs  ExHeap.hs  ExLambda.hs  ExMerge.hs  ExSet.hs  ExSet2.hs  ExSimple.hs  ExTrie.hs  ExWeird.hs  ExWords.hs  Example1.hs  Example2.hs  Heap.hs  Heap_Program.hs  Heap_ProgramAlgebraic.hs  Lambda.hs  Merge.hs  MyList.hs  Set.hs  Simple.hs  SlowShrinking.hs  Weird.hs
src/Test/: QuickCheck.hs
src/Test/QuickCheck/: All.hs  Arbitrary.hs  Compat.hs  Exception.hs  Features.hs  Function.hs  Gen.hs  Modifiers.hs  Monadic.hs  Monoids.hs  Poly.hs  Property.hs  Random.hs  State.hs  Test.hs  Text.hs
tests/: CollectDataTypes.hs  DiscardRatio.hs  GCoArbitraryExample.hs  GShrinkExample.hs  Generators.hs  Misc.hs  MonadFix.hs  Monoids.hs  RoseExample.hs  RunCollectDataTypes.hs  ShrinkMap.hs  Split.hs  Strictness.hs  TabulateSlow.hs  Terminal.hs  TestRandom.hs  Weird.hs  WithProgress.hs
